[package]
name = "bevy_common_cmds"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy= {version = "0.14.2", features = ["dynamic_linking"] }

typed-builder = "0.20.0" #for creating Args structs
optional-default = "0.1.0" #For creating the Args struct
derive_builder = "0.20.1" #For creating the Args struct

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = true #shuo;ld be on by default, but just to be sure.

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3