[package]
name = "bevy_cmd_extensions"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy= {version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier2d = "0.27.0"
bevy_rapier3d = "0.27.0"
bon = "2.3.0"

[dependencies.bevy_collider_gen]
version = "0.2.2"
features = ["rapier2d"]
default-features = false

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = true #shuo;ld be on by default, but just to be sure.

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3